# chalice-cdk-covid-clicker

./: Pipfile  README.rst  mypy.ini  pyproject.toml
frontend/: .env.development
infrastructure/: app.py
infrastructure/stacks/: chaliceapp.py
runtime/: app.py  requirements.txt
runtime/.chalice/: config.json
runtime/chalicelib/models/: virus.py
